# eatchef_server

./: .coveragerc  .dockerignore  .drone.yml  .gitignore  Dockerfile  Pipfile  README.md  copy_gc_files.py  docker-compose.yml  pyproject.toml
cassettes/: recipe.tests.RecipeParserTestCase.test_A_add_recipe_from_json.yaml  recipe.tests.RecipeParserTestCase.test_C_parser_download.yaml  recipe.tests.RecipeParserTestCase.test_D_parser_download_next_day.yaml  users.tests.UserRegistrationsTestCase.test_google_social_auth_user_creation.yaml
chef_pencils/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
docker/: entrypoint.sh
logs/: .gitignore
main/: admin_utils.py  backends.py  celery_config.py  consumers.py  context_processors.py  middleware.py  mixins.py  permissions.py  storage_backends.py  urls.py  validators.py  watermark_storage.py  websocket_routing.py  wsgi.py
notifications/: admin.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
recipe/: admin.py  enums.py  errors.py  filters.py  forms.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
site_settings/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
social/: admin.py  models.py  serializers.py  tests.py
stats/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  enums.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
utils/: admin.py  email.py  file_storage.py  helper.py  loggers.py  (+6 more)
(+222 files in other folders)
